[update]p5.js入門 #09 図形を変形させてみよう

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="ja">
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-    <script src="sketch.js"></script>
+  <meta charset="utf-8">
+  <title>p5 js practice</title>
 </head>
+<body>
 
-<body style="margin:0">
-    <main>
-    </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.min.js"></script>
+  <script src="myscript.js"></script>
 </body>
-
 </html>
