--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>p5 js practice</title>
+  <title>Creative Coding</title>
 </head>
 <body>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.min.js"></script>
-  <script src="myscript.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+  <script src="sketch.js"></script>
 </body>
 </html>
