[add]リンクページを作成

--- a/dot/index.html
+++ b/dot/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>Random Dot</title>
+  <title>Random Dot.</title>
 </head>
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.min.js"></script>
