--- a/index.html
+++ b/index.html
@@ -3,8 +3,49 @@
 <head>
   <meta charset="utf-8">
   <title>Creative Coding</title>
+  <style>
+    body {
+      background: #666;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      color: #222;
+      margin: 20px 10px;
+    }
+    a {
+      color: #222;
+      margin: 10px;
+    }
+    section {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+    canvas {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      opacity: 0.1;
+    }
+  </style>
 </head>
 <body>
+  <section>
+    <h1>Creative Coding</h1>
+    <p><a href="/dot/index.html">Random Dot.</a></p>
+    <p><a href="/spheres/index.html">Rotating spheres.</a></p>
+    <p><a href="/spiral/index.html">Spiral Circles.</a></p>
+    <p><a href="/triangle/index.html">Solid Triangle.</a></p>
+    <p><a href="/whirlpools/index.html">Following Whirlpools.</a></p>
+  </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
   <script src="sketch.js"></script>
 </body>
