--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 <body>
   <section>
     <h1>Creative Coding</h1>
-    <p><a href="/dot/index.html">Random Dot.</a></p>
-    <p><a href="/spheres/index.html">Rotating spheres.</a></p>
-    <p><a href="/spiral/index.html">Spiral Circles.</a></p>
-    <p><a href="/triangle/index.html">Solid Triangle.</a></p>
-    <p><a href="/whirlpools/index.html">Following Whirlpools.</a></p>
+    <p><a href="./cloth/index.html">Shimmering Cloth.</a></p>
+    <p><a href="./codes/index.html">Sea of Codes.</a></p>
+    <p><a href="./dot/index.html">Random Dot.</a></p>
+    <p><a href="./spheres/index.html">Rotating spheres.</a></p>
+    <p><a href="./spiral/index.html">Spiral Circles.</a></p>
+    <p><a href="./triangle/index.html">Solid Triangle.</a></p>
+    <p><a href="./whirlpools/index.html">Following Whirlpools.</a></p>
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
   <script src="sketch.js"></script>
